Portage Android : un APK, les deux moteurs (2D fidèle + vue 3D jME)
Gloom tourne sur téléphone. Mesuré sur un Xiaomi : la 2D à 60 fps, la 3D à 47
(35 en zone ouverte), avec les assets récupérés au premier lancement.

Le pari du portage paie : le MOTEUR EST PARTI TEL QUEL. Le module Android compile
../src directement — pas une ligne dupliquée — et il n'a fallu exclure que la
poignée de fichiers réellement liés au desktop (Main/Display/Audio, DesktopGlue,
les harnais de tools/). Deux coutures ont suffi pour cela :

- HostGlue : les TROIS choses de Rebirth qui ne compilent pas sur Android — verrou
  du curseur et taille du framebuffer (GLFW), capture PNG (AWT/ImageIO). Rebirth.java
  ne référence plus ni LWJGL ni AWT ; l'implémentation desktop est chargée par
  réflexion, Android prend des no-ops. Capture desktop vérifiée identique.
- AudioBackend : contrat commun aux deux backends (OpenAL desktop, AudioTrack
  Android). Le mixeur Android refait ce que faisait Paula — 4 voies, période →
  fréquence, pas en 16.16, mêmes règles de priorité — et additionne la musique de
  MedPlayer dans un unique AudioTrack.

Côté hôte Android (~900 lignes) : le framebuffer $0RGB devient un Bitmap tiré en
letterbox 4:3 ; les commandes tactiles passent par les quatre entiers de setInput
(et par setTouchInput/pressEscape pour la 3D), donc aucun chemin de jeu ne change.
Launcher CLASSIC 2D / REBIRTH 3D comme sur desktop, la 3D dans SON PROPRE PROCESSUS
(le moteur est un gros paquet de statiques : un processus neuf garantit à jME un
état vierge). Bouton MENU et touche retour reculent d'un cran : partie → menu →
launcher → quitter.

Assets : l'APK est VIERGE, comme le paquet jpackage — ils ne sont pas
redistribuables. AssetSetup les récupère au premier lancement depuis
github.com/earok/GloomAmiga (garde-fou zip-slip, écriture atomique).

Trois corrections de PORTABILITÉ dans le code partagé, qui valaient aussi pour le
desktop :
- Files.readString/writeString sont des API 33 sur Android → readA